--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-  background-color: #111111;
-  color: #fff;
-}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 
+}
